scripts/nullaway/original/urld73c47f3e5_lindenb_dataindexer_tgz-pJ8-test_github_lindenb_dataindexer_SimpleIntegerJ8.txt
../original/urld73c47f3e5_lindenb_dataindexer_tgz-pJ8-test_github_lindenb_dataindexer_SimpleIntegerJ8/src/test/github/lindenb/dataindexer/dbsnp/DBSnpLoader.java:36: error: [NullAway] @NonNull field dbSnp137File not initialized
	private File dbSnp137File;
	             ^
    (see http://t.uber.com/nullaway )
../original/urld73c47f3e5_lindenb_dataindexer_tgz-pJ8-test_github_lindenb_dataindexer_SimpleIntegerJ8/src/test/github/lindenb/dataindexer/dbsnp/DBSnpLoader.java:77: error: [NullAway] @NonNull field DBSnpLoader$Snp.chrom not initialized
		String chrom;
		       ^
    (see http://t.uber.com/nullaway )
../original/urld73c47f3e5_lindenb_dataindexer_tgz-pJ8-test_github_lindenb_dataindexer_SimpleIntegerJ8/src/test/github/lindenb/dataindexer/dbsnp/DBSnpLoader.java:80: error: [NullAway] @NonNull field DBSnpLoader$Snp.rs_id not initialized
		Rs rs_id;
		   ^
    (see http://t.uber.com/nullaway )
../original/urld73c47f3e5_lindenb_dataindexer_tgz-pJ8-test_github_lindenb_dataindexer_SimpleIntegerJ8/src/com/github/lindenb/dataindexer/AbstractDatabaseReader.java:28: error: [NullAway] assigning @Nullable expression to @NonNull field
	private RandomAccessFile indexFile=null;
	                         ^
    (see http://t.uber.com/nullaway )
../original/urld73c47f3e5_lindenb_dataindexer_tgz-pJ8-test_github_lindenb_dataindexer_SimpleIntegerJ8/src/com/github/lindenb/dataindexer/AbstractDatabaseReader.java:30: error: [NullAway] assigning @Nullable expression to @NonNull field
	private RandomAccessInput dataFile=null;
	                          ^
    (see http://t.uber.com/nullaway )
../original/urld73c47f3e5_lindenb_dataindexer_tgz-pJ8-test_github_lindenb_dataindexer_SimpleIntegerJ8/src/com/github/lindenb/dataindexer/AbstractDatabaseReader.java:138: error: [NullAway] assigning @Nullable expression to @NonNull field
			this.indexFile=null;
			              ^
    (see http://t.uber.com/nullaway )
../original/urld73c47f3e5_lindenb_dataindexer_tgz-pJ8-test_github_lindenb_dataindexer_SimpleIntegerJ8/src/com/github/lindenb/dataindexer/AbstractDatabaseReader.java:143: error: [NullAway] assigning @Nullable expression to @NonNull field
			this.dataFile=null;
			             ^
    (see http://t.uber.com/nullaway )
../original/urld73c47f3e5_lindenb_dataindexer_tgz-pJ8-test_github_lindenb_dataindexer_SimpleIntegerJ8/src/com/github/lindenb/dataindexer/SecondaryConfig.java:9: error: [NullAway] @NonNull field keyCreator not initialized
	protected SecondaryKeyCreator<PRIMARY, K> keyCreator;
	                                          ^
    (see http://t.uber.com/nullaway )
../original/urld73c47f3e5_lindenb_dataindexer_tgz-pJ8-test_github_lindenb_dataindexer_SimpleIntegerJ8/src/com/github/lindenb/dataindexer/SecondaryConfig.java:10: error: [NullAway] @NonNull field comparator not initialized
	private Comparator<K> comparator;
	                      ^
    (see http://t.uber.com/nullaway )
../original/urld73c47f3e5_lindenb_dataindexer_tgz-pJ8-test_github_lindenb_dataindexer_SimpleIntegerJ8/src/com/github/lindenb/dataindexer/SecondaryConfig.java:11: error: [NullAway] assigning @Nullable expression to @NonNull field
	private TupleBinding<K> keyBinding=null;
	                        ^
    (see http://t.uber.com/nullaway )
../original/urld73c47f3e5_lindenb_dataindexer_tgz-pJ8-test_github_lindenb_dataindexer_SimpleIntegerJ8/src/com/github/lindenb/dataindexer/SecondaryConfig.java:12: error: [NullAway] assigning @Nullable expression to @NonNull field
	private TupleBinding<ObjectAndOffset<K>> dataBinding=null;
	                                         ^
    (see http://t.uber.com/nullaway )
../original/urld73c47f3e5_lindenb_dataindexer_tgz-pJ8-test_github_lindenb_dataindexer_SimpleIntegerJ8/src/com/github/lindenb/dataindexer/AbstractConfig.java:11: error: [NullAway] @NonNull field homeDir not initialized
	private File homeDir;
	             ^
    (see http://t.uber.com/nullaway )
../original/urld73c47f3e5_lindenb_dataindexer_tgz-pJ8-test_github_lindenb_dataindexer_SimpleIntegerJ8/src/com/github/lindenb/dataindexer/AbstractConfig.java:12: error: [NullAway] @NonNull field name not initialized
	private String name;
	               ^
    (see http://t.uber.com/nullaway )
../original/urld73c47f3e5_lindenb_dataindexer_tgz-pJ8-test_github_lindenb_dataindexer_SimpleIntegerJ8/src/com/github/lindenb/dataindexer/AbstractConfig.java:13: error: [NullAway] @NonNull field sizeof_item not initialized
	private Integer sizeof_item;
	                ^
    (see http://t.uber.com/nullaway )
../original/urld73c47f3e5_lindenb_dataindexer_tgz-pJ8-test_github_lindenb_dataindexer_SimpleIntegerJ8/src/com/github/lindenb/dataindexer/AbstractConfig.java:15: error: [NullAway] @NonNull field logger not initialized
	private Logger logger;
	               ^
    (see http://t.uber.com/nullaway )
../original/urld73c47f3e5_lindenb_dataindexer_tgz-pJ8-test_github_lindenb_dataindexer_SimpleIntegerJ8/src/com/github/lindenb/dataindexer/AbstractConfig.java:10: error: [NullAway] assigning @Nullable expression to @NonNull field
	private RandomAccessFactory offsetStreamFactory=null;
	                            ^
    (see http://t.uber.com/nullaway )
../original/urld73c47f3e5_lindenb_dataindexer_tgz-pJ8-test_github_lindenb_dataindexer_SimpleIntegerJ8/src/com/github/lindenb/dataindexer/PrimaryConfig.java:6: error: [NullAway] @NonNull field dataBinding not initialized
	private TupleBinding<T> dataBinding;
	                        ^
    (see http://t.uber.com/nullaway )
../original/urld73c47f3e5_lindenb_dataindexer_tgz-pJ8-test_github_lindenb_dataindexer_SimpleIntegerJ8/src/com/github/lindenb/dataindexer/PrimaryDataIndexWriter.java:36: error: [NullAway] assigning @Nullable expression to @NonNull field
	private RandomAccessFile indexFile=null;
	                         ^
    (see http://t.uber.com/nullaway )
../original/urld73c47f3e5_lindenb_dataindexer_tgz-pJ8-test_github_lindenb_dataindexer_SimpleIntegerJ8/src/com/github/lindenb/dataindexer/PrimaryDataIndexWriter.java:37: error: [NullAway] assigning @Nullable expression to @NonNull field
	private RandomAccessOutput dataOutput=null;
	                           ^
    (see http://t.uber.com/nullaway )
../original/urld73c47f3e5_lindenb_dataindexer_tgz-pJ8-test_github_lindenb_dataindexer_SimpleIntegerJ8/src/com/github/lindenb/dataindexer/AbstractDataIndexer.java:24: error: [NullAway] assigning @Nullable expression to @NonNull field
	private TupleBinding<T> dataBinding=null;
	                        ^
    (see http://t.uber.com/nullaway )
../original/urld73c47f3e5_lindenb_dataindexer_tgz-pJ8-test_github_lindenb_dataindexer_SimpleIntegerJ8/src/com/github/lindenb/dataindexer/SecondaryDataWriter.java:32: error: [NullAway] initializer method does not guarantee @NonNull fields tmpOut (line 19), tmpFile1 (line 21) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public SecondaryDataWriter(SecondaryConfig<PRIMARY,K> config,PrimaryDataIndexWriter<PRIMARY> owner) throws IOException
	       ^
    (see http://t.uber.com/nullaway )
../original/urld73c47f3e5_lindenb_dataindexer_tgz-pJ8-test_github_lindenb_dataindexer_SimpleIntegerJ8/src/com/github/lindenb/dataindexer/SecondaryDataWriter.java:24: error: [NullAway] assigning @Nullable expression to @NonNull field
	private Comparator<ObjectAndOffset<K>> objectAndOffsetComparator=null;
	                                       ^
    (see http://t.uber.com/nullaway )
../original/urld73c47f3e5_lindenb_dataindexer_tgz-pJ8-test_github_lindenb_dataindexer_SimpleIntegerJ8/src/com/github/lindenb/dataindexer/SecondaryDataWriter.java:76: error: [NullAway] assigning @Nullable expression to @NonNull field
			this.tmpFile1=null;
			             ^
    (see http://t.uber.com/nullaway )
../original/urld73c47f3e5_lindenb_dataindexer_tgz-pJ8-test_github_lindenb_dataindexer_SimpleIntegerJ8/src/com/github/lindenb/dataindexer/SecondaryDataWriter.java:77: error: [NullAway] assigning @Nullable expression to @NonNull field
			this.tmpOut=null;
			           ^
    (see http://t.uber.com/nullaway )
../original/urld73c47f3e5_lindenb_dataindexer_tgz-pJ8-test_github_lindenb_dataindexer_SimpleIntegerJ8/src/com/github/lindenb/dataindexer/SecondaryDataWriter.java:89: error: [NullAway] @NonNull field SecondaryDataWriter$FileAndSize.file not initialized
		File file;
		     ^
    (see http://t.uber.com/nullaway )
../original/urld73c47f3e5_lindenb_dataindexer_tgz-pJ8-test_github_lindenb_dataindexer_SimpleIntegerJ8/src/com/github/lindenb/dataindexer/SecondaryDataWriter.java:91: error: [NullAway] @NonNull field SecondaryDataWriter$FileAndSize.in not initialized
		DataInputStream in;
		                ^
    (see http://t.uber.com/nullaway )
../original/urld73c47f3e5_lindenb_dataindexer_tgz-pJ8-test_github_lindenb_dataindexer_SimpleIntegerJ8/src/com/github/lindenb/dataindexer/SecondaryDataWriter.java:92: error: [NullAway] @NonNull field SecondaryDataWriter$FileAndSize.out not initialized
		DataOutputStream out;
		                 ^
    (see http://t.uber.com/nullaway )
../original/urld73c47f3e5_lindenb_dataindexer_tgz-pJ8-test_github_lindenb_dataindexer_SimpleIntegerJ8/src/com/github/lindenb/dataindexer/SecondaryDataWriter.java:282: error: [NullAway] dereferenced expression prevFile is @Nullable
		prevFile.close();
		        ^
    (see http://t.uber.com/nullaway )
../original/urld73c47f3e5_lindenb_dataindexer_tgz-pJ8-test_github_lindenb_dataindexer_SimpleIntegerJ8/src/com/github/lindenb/dataindexer/SecondaryDataWriter.java:285: error: [NullAway] assigning @Nullable expression to @NonNull field
		this.tmpOut=null;
		           ^
    (see http://t.uber.com/nullaway )
29 errors
